--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
 
-  <title>React App</title>
+  <title>Tabboukh</title>
 </head>
 
 <body>
